fix: keywords missing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "console-namespace-extender",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Extend the console with namespaces for better-organized logging.",
   "main": "dist/commonjs/index.js",
   "module": "dist/esm/index.js",
@@ -9,7 +9,7 @@
     "build-webpack": "webpack",
     "build-tsc-esm": "tsc -p tsconfig.esm.json",
     "build-tsc-commonjs": "tsc -p tsconfig.commonjs.json",
-    "build": "npm run build-tsc-esm && npm run build-tsc-commonjs && npm run build-webpack",
+    "build": "npm run build-tsc-esm && npm run build-tsc-commonjs && npm run build-webpack && eslint ./dist --fix",
     "prepublishOnly": "npm run build",
     "preversion": "npm run build",
     "version": "npm run build && git add -A dist",
@@ -17,7 +17,7 @@
     "pretest": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "lint-staged": "eslint ./dist --fix && git add -A dist",
+    "lint-staged": "eslint ./dist && git add -A dist",
     "commitlint": "commitlint --edit",
     "commit": "cz"
   },
@@ -47,5 +47,62 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "keywords": [
+    "console",
+    "console-extension",
+    "logging",
+    "namespace",
+    "prefix",
+    "debug",
+    "trace",
+    "log-prefix",
+    "extend-console",
+    "namespaced-logs",
+    "console-enhancer",
+    "structured-logging",
+    "console-namespace",
+    "console-modifier",
+    "log-enhancer",
+    "log-modifier",
+    "log-namespace",
+    "log-extension",
+    "logger",
+    "development-tools",
+    "log-wrapper",
+    "organized-logs",
+    "console-prefix",
+    "console-tools",
+    "console-improvement",
+    "console-output",
+    "custom-console",
+    "devlog",
+    "prefix-log",
+    "logging-tools",
+    "logging-enhancements",
+    "advanced-logging",
+    "log-formatting",
+    "console-formatting",
+    "log-tools",
+    "console-tools",
+    "developer-console",
+    "debugging-tools",
+    "debug-log",
+    "console-utilities",
+    "log-utils",
+    "console-addons",
+    "console-log-extensions",
+    "logging-library",
+    "log-prefixing",
+    "console-log-wrapper",
+    "log-modifications",
+    "console-customizations",
+    "console-logger",
+    "console-log-helper",
+    "log-output",
+    "console-log-format",
+    "structured-console",
+    "console-helper"
+  ]
+  
 }
